--- a/SimGui.fxml
+++ b/SimGui.fxml
@@ -12,7 +12,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ba_transaktionen.Controller">
     <top>
-        <Label text="Simulation Teilnehmerverhalten in Kryptonetzwerken" BorderPane.alignment="CENTER">
+        <Label text="Simulation Teilnehmerverhalten einer Währung" BorderPane.alignment="CENTER">
             <BorderPane.margin>
                 <Insets bottom="10.0" top="10.0" />
             </BorderPane.margin></Label>
