--- a/ChartGui.fxml
+++ b/ChartGui.fxml
@@ -3,114 +3,148 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fx:id="scrollPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="613.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ba_transaktionen.ControllerCharts">
-    <content>
-        <GridPane fx:id="gridPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="947.0" prefWidth="585.0">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="349.0" minWidth="10.0" prefWidth="349.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="287.5" minWidth="10.0" prefWidth="236.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints maxHeight="70.0" minHeight="70.0" prefHeight="70.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="300.5" minHeight="122.5" prefHeight="209.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="417.5" minHeight="239.5" prefHeight="315.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="318.0" minHeight="270.0" prefHeight="315.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-                <Label prefHeight="44.0" prefWidth="171.0" text="Simulationsauswertungen">
-                    <GridPane.margin>
-                        <Insets bottom="20.0" left="40.0" top="10.0" />
-                    </GridPane.margin>
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Label>
-                <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
-                    <children>
-                        <Label text="Anteil Teilnehmerverhalten">
-                            <VBox.margin>
-                                <Insets bottom="20.0" left="40.0" />
-                            </VBox.margin>
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21">
+  <content>
+    <AnchorPane prefHeight="596.0" prefWidth="589.0">
+         <children>
+            <VBox prefHeight="800.0" prefWidth="587.0">
+               <children>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Simulationsauswertung">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                           <HBox.margin>
+                              <Insets left="30.0" top="40.0" />
+                           </HBox.margin>
                         </Label>
-                        <Pane fx:id="anteilTeilnehmer" prefHeight="193.0" prefWidth="228.0">
-                            <VBox.margin>
-                                <Insets left="80.0" right="30.0" top="20.0" />
-                            </VBox.margin>
-                            <padding>
-                                <Insets bottom="20.0" left="30.0" />
-                            </padding></Pane>
-                    </children>
-                    <GridPane.margin>
-                        <Insets bottom="10.0" top="10.0" />
-                    </GridPane.margin>
-                </VBox>
-                <VBox fx:id="vboxAT" prefHeight="139.0" prefWidth="292.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                    <children>
-                        <Label text="Anteil Transaktionen">
-                            <VBox.margin>
-                                <Insets top="50.0" />
-                            </VBox.margin>
+                        <Label prefHeight="34.0" prefWidth="267.0" text="Bitte 'Reset' drücken, zum Anzeigen der Charts">
+                           <HBox.margin>
+                              <Insets left="100.0" top="40.0" />
+                           </HBox.margin>
                         </Label>
-                        <Label fx:id="anteilTransaktionen" alignment="CENTER" contentDisplay="CENTER" prefHeight="52.0" prefWidth="168.0" textAlignment="CENTER" textFill="#0d26e1">
-                            <VBox.margin>
-                                <Insets top="20.0" />
-                            </VBox.margin>
-                            <font>
-                                <Font name="System Bold" size="18.0" />
-                            </font>
-                        </Label>
-                    </children>
-                    <GridPane.margin>
-                        <Insets bottom="10.0" top="10.0" />
-                    </GridPane.margin>
-                </VBox>
-                <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
-                    <children>
+                     </children>
+                  </HBox>
+                  <HBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="114.0" prefWidth="586.0">
+                     <children>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="Anteil Teilnehmerverhalten">
+                                 <VBox.margin>
+                                    <Insets bottom="20.0" left="40.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Pane fx:id="anteilTeilnehmer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="228.0">
+                                 <VBox.margin>
+                                    <Insets left="80.0" right="30.0" top="20.0" />
+                                 </VBox.margin>
+                                 <padding>
+                                    <Insets bottom="20.0" left="30.0" />
+                                 </padding>
+                              </Pane>
+                           </children>
+                        </VBox>
+                        <VBox fx:id="vboxAT" prefHeight="114.0" prefWidth="230.0">
+                           <children>
+                              <Label text="Anteil Transaktionen">
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </Label>
+                              <Label fx:id="anteilTransaktionen" alignment="CENTER" contentDisplay="CENTER" prefHeight="52.0" prefWidth="168.0" textAlignment="CENTER" textFill="#0d26e1">
+                                 <VBox.margin>
+                                    <Insets top="40.0" />
+                                 </VBox.margin>
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
                         <Label text="Coins im Umlauf">
-                            <VBox.margin>
-                                <Insets bottom="10.0" left="40.0" />
-                            </VBox.margin>
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="40.0" />
+                           </VBox.margin>
                         </Label>
                         <Pane fx:id="coinsUmlauf" maxHeight="-Infinity" prefHeight="300.0" prefWidth="382.0">
-                            <VBox.margin>
-                                <Insets left="40.0" top="20.0" />
-                            </VBox.margin>
+                           <VBox.margin>
+                              <Insets left="40.0" right="40.0" top="20.0" />
+                           </VBox.margin>
                         </Pane>
-                    </children>
-                    <GridPane.margin>
-                        <Insets bottom="10.0" top="10.0" />
-                    </GridPane.margin>
-                </VBox>
-                <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="3">
-                    <children>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
                         <Label text="Währungskurs">
-                            <VBox.margin>
-                                <Insets bottom="10.0" left="40.0" top="10.0" />
-                            </VBox.margin>
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="40.0" top="10.0" />
+                           </VBox.margin>
                         </Label>
                         <Pane fx:id="coinsDurchschnitt" maxHeight="-Infinity" prefHeight="300.0" prefWidth="200.0">
-                            <VBox.margin>
-                                <Insets left="40.0" top="20.0" />
-                            </VBox.margin>
+                           <VBox.margin>
+                              <Insets left="40.0" right="40.0" top="20.0" />
+                           </VBox.margin>
                         </Pane>
-                    </children>
-                    <GridPane.margin>
-                        <Insets bottom="10.0" top="10.0" />
-                    </GridPane.margin>
-                </VBox>
-                <Label fx:id="resetInfo" prefHeight="50.0" prefWidth="205.0" GridPane.columnIndex="1">
-                    <GridPane.margin>
-                        <Insets top="20.0" />
-                    </GridPane.margin>
-                </Label>
-            </children>
-        </GridPane>
-    </content>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Label text="Inflation">
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="40.0" top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <Pane fx:id="inflation" maxHeight="-Infinity" prefHeight="300.0" prefWidth="200.0">
+                           <VBox.margin>
+                              <Insets left="40.0" right="40.0" top="20.0" />
+                           </VBox.margin>
+                        </Pane>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Label text="Nachfrage">
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="40.0" top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <Pane fx:id="nachfrage" maxHeight="-Infinity" prefHeight="300.0" prefWidth="200.0">
+                           <VBox.margin>
+                              <Insets left="40.0" right="40.0" top="20.0" />
+                           </VBox.margin>
+                        </Pane>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Label text="Leitzins">
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="40.0" top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <Pane fx:id="leitzins" maxHeight="-Infinity" prefHeight="300.0" prefWidth="200.0">
+                           <VBox.margin>
+                              <Insets left="40.0" right="40.0" top="20.0" />
+                           </VBox.margin>
+                        </Pane>
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
+         </children></AnchorPane>
+  </content>
 </ScrollPane>
