--- a/HackerChartGui.fxml
+++ b/HackerChartGui.fxml
@@ -8,48 +8,48 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fx:id="scrollPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="467.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ba_transaktionen.ControllerHackerCharts">
-    <content>
-        <VBox minHeight="-Infinity" prefHeight="850.0" prefWidth="590.0">
-            <children>
-                <HBox prefHeight="100.0" prefWidth="200.0">
-                    <children>
-                        <Label text="Hackerauswertungen">
-                            <font>
-                                <Font size="14.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets bottom="20.0" left="40.0" top="20.0" />
-                            </HBox.margin>
-                        </Label>
-                        <Label fx:id="resetInfo" minHeight="-Infinity" prefHeight="50.0" prefWidth="211.0">
-                            <HBox.margin>
-                                <Insets bottom="20.0" left="200.0" top="10.0" />
-                            </HBox.margin>
-                        </Label>
-                    </children>
-                </HBox>
-                <Label text="Coins des Hackers">
-                    <VBox.margin>
-                        <Insets left="40.0" top="20.0" />
-                    </VBox.margin>
-                </Label>
-                <Pane fx:id="coinsHackerPane" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="300.0" prefWidth="200.0">
-                    <VBox.margin>
-                        <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
-                    </VBox.margin>
-                </Pane>
-                <Label fx:id="teilnehmerLabel" minHeight="-Infinity" prefHeight="70.0" prefWidth="355.0" text="Auwirkungen auf die Teilnehmer  rot = gehackt, grün = geschützt">
-                    <VBox.margin>
-                        <Insets left="40.0" top="20.0" />
-                    </VBox.margin>
-                </Label>
-                <Pane fx:id="teilnehmerPane" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="300.0" prefWidth="200.0">
-                    <VBox.margin>
-                        <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
-                    </VBox.margin>
-                </Pane>
-            </children>
-        </VBox>
-    </content>
+<ScrollPane fx:id="scrollPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ba_transaktionen.ControllerHackerCharts">
+   <content>
+      <VBox>
+         <children>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Hackerauswertungen">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets bottom="20.0" left="40.0" top="20.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="resetInfo" minHeight="-Infinity" prefHeight="50.0" prefWidth="211.0">
+                     <HBox.margin>
+                        <Insets bottom="20.0" left="200.0" top="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <Label text="Coins des Hackers">
+               <VBox.margin>
+                  <Insets left="40.0" top="20.0" />
+               </VBox.margin>
+            </Label>
+            <Pane fx:id="coinsHackerPane" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="900.0">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
+               </VBox.margin>
+            </Pane>
+            <Label fx:id="teilnehmerLabel" minHeight="-Infinity" prefHeight="70.0" prefWidth="355.0" text="Auwirkungen auf die Teilnehmer  rot = gehackt, grün = geschützt">
+               <VBox.margin>
+                  <Insets left="40.0" top="20.0" />
+               </VBox.margin>
+            </Label>
+            <Pane fx:id="teilnehmerPane" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="900.0">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
+               </VBox.margin>
+            </Pane>
+         </children>
+      </VBox>
+   </content>
 </ScrollPane>
